--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: FuME Match Explorer
-description: FuME hilft dir beim Planen, Sortieren und Reservieren von Fußballspielen, damit dir kein Spiel entgeht! 
+title: FuME - FuPa Match Explorer
+description: das kostenlose Tool für FuPa-Fotografen. Filtern, Reservieren, Hochladen.
 show_downloads: true
 theme: jekyll-theme-cayman
